--- a/Backend/CustomData/RunnerInfo.html
+++ b/Backend/CustomData/RunnerInfo.html
@@ -20,6 +20,9 @@
         h2 {
             color: #333;
         }
+        table {
+            margin-bottom: 5%;
+        }
         p {
             color: #555;
             margin: 20px 0;
