--- a/Backend/CustomData/SponsorInfo.html
+++ b/Backend/CustomData/SponsorInfo.html
@@ -117,7 +117,7 @@
             </tr>
         </table>
 
-        <p>Spenden Sie den Betrag von <i>{{ Total }} €</i> bitte bis zum <i>01.01.9999</i></p>
+        <p>Spenden Sie den Betrag von <i>{{ Total }} €</i> bitte bis zum <i>**Hier Datum einfügen**</i></p>
         <div>
             <p>Sollten Sie nicht Spenden können oder die Frist verfehlen melden Sie sich unter: </p>
             <p><i>example@mail.de</i> oder bei den Spendenlauf verantworlichen</p>
