Bugfix Runner info mail

--- a/Backend/CustomData/RunnerInfo.html
+++ b/Backend/CustomData/RunnerInfo.html
@@ -101,29 +101,8 @@
         <h4>Insgesamt: {{ RunnerTotal }} €</h4>
 
         <hr>
-        <!-- Aufforderung  -->
-        <h3>Spendenanschrift:</h3>
-        <table>
-            <tr>
-                <th>IBAN: </th>
-                <td>DE02100500000054540402</td>
-            </tr>
-            <tr>
-                <th>Bank: </th>
-                <td>LANDESBANK BERLIN</td>
-            </tr>
-            <tr>
-                <th>BIC: </th>
-                <td>BELADEBE</td>
-            </tr>
-        </table>
-
-        <p>Spenden Sie bitte bis zum <i>**Datum einfügen**</i></p>
-        <div>
-            <p>Sollten Sie nicht Spenden können oder die Frist verfehlen melden Sie sich unter: </p>
-            <p><i>example@mail.de</i> oder bei den Spendenlauf verantworlichen</p>
-        </div>
-            
+        
+        <p>Ihr Sponsor*innen wurden ebnso bereits informiert!</p> 
 
         <a href="https://youtu.be/dQw4w9WgXcQ?si=PatBcehocbhGib2A" class="button">Mehr Informationen</a>
     </div>
