added info page, added don req, added agb question, editet mails

--- a/Backend/CustomData/ForgotPwdMail.html
+++ b/Backend/CustomData/ForgotPwdMail.html
@@ -52,8 +52,8 @@
     <div class="container">
         <!-- Begrüßung  -->
         <h2>Kennwort zurücksetzen!</h2> 
-        <p>Sie haben angefordert, ihr Passwort zu ändern</p>
-        <p>Wenn Sie folgenden Link drücken, wird Ihnen ein neues Passwort generiert. Dises können Sie in Ihren Einstellungen ändern</p>
+        <p>Sie haben angefordert, Ihr Passwort zu ändern</p>
+        <p>Wenn Sie folgenden Link drücken, wird Ihnen ein neues Passwort generiert. Dises können Sie in Ihren Einstellungen ändern.</p>
         <p><b>Achtung:</b> Der Link ist nur für kurze Zeit gültig!</p>
         
 
