--- a/Backend/CustomData/UserAuth.html
+++ b/Backend/CustomData/UserAuth.html
@@ -45,7 +45,7 @@
         {% comment %} Begrüßung {% endcomment %}
         <h2>Vielen Dank für die Anmeldung {{ name }}</h2> 
         {% comment %} Aufforderung {% endcomment %}
-        <p>Bitte verifizieren Sie ihre Anmeldung.</p>
+        <p>Bitte verifizieren Sie Ihre Anmeldung.</p>
         <a href="{{ link_url }}" class="button">Verifizieren</a>
     </div>
 </body>
