impressum, datasec, hungerlauf things, better responsive etc

--- a/Backend/CustomData/DonRecAuth.html
+++ b/Backend/CustomData/DonRecAuth.html
@@ -75,11 +75,13 @@
         <h3>Bitte verifizieren Sie, über den Knopf/Link, ihre Spendenbereitschaft!</h3>
         
         <p>
-            Ja, mit meiner Verifizierung als Sponsor*in über den Knopf/Link 
+            "Ja, mit meiner Verifizierung als Sponsor*in über den Knopf/Link 
             <strong>erkläre ich mich damit einverstanden</strong>, 
-            dass meine Daten zur Erstellung der Spendenbescheinigung und zum Nachvollziehen der Spendeneingänge an die Allianzmission weiter gegeben werden.</p>
+            dass meine Daten zur Erstellung der Spendenbescheinigung und zum Nachvollziehen der Spendeneingänge an die Allianzmission weiter gegeben werden."</p>
         <a href="{{ link_url }}" class="button">Verifizieren</a>
         <p style="font-size: 13px;">Sollten Sie nicht Spenden wollen oder sollte es sich um ein Missverständinis Handeln, ignorieren Sie bitte diese E-Mail!</p>
+        <p>Weitere Informationen finden Sie hier: <a href="https://www.evangelischegemeinschaftluetzel.de/unser-hungerlauf/">Infos Hungerlauf</a></p>
+        
     </div>
 </body>
 </html>
